--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -275,7 +275,7 @@ endergenic {
 
 environmental {
     # Set to true to make the blindness module work on players [default: false]
-    B:blindnessAvailable=false
+    B:blindnessAvailable=true
 
     # RF per tick/per block for the blindness module [range: 0.0 ~ 1.0E9, default: 0.01]
     S:blindnessRFPerTick=0.01
@@ -323,7 +323,7 @@ environmental {
     S:peacefulRFPerTick=0.001
 
     # Set to true to make the poison module work on players [default: false]
-    B:poisonAvailable=false
+    B:poisonAvailable=true
 
     # RF per tick/per block for the poison module [range: 0.0 ~ 1.0E9, default: 0.02]
     S:poisonRFPerTick=0.02
@@ -341,7 +341,7 @@ environmental {
     S:saturationRFPerTick=0.001
 
     # Set to true to make the slowness module work on players [default: false]
-    B:slownessAvailable=false
+    B:slownessAvailable=true
 
     # RF per tick/per block for the slowness module [range: 0.0 ~ 1.0E9, default: 0.012]
     S:slownessRFPerTick=0.012
@@ -356,7 +356,7 @@ environmental {
     S:watherBreathingRFPerTick=0.001
 
     # Set to true to make the weakness module work on players [default: false]
-    B:weaknessAvailable=false
+    B:weaknessAvailable=true
 
     # RF per tick/per block for the weakness module [range: 0.0 ~ 1.0E9, default: 0.01]
     S:weaknessRFPerTick=0.01
